# yadem-ai-engine

./: .env.example  .gitignore  Makefile  PRESENTATION_GUIDE.md  QUICKSTART.md  README.md  START_DEMO.bat  pyproject.toml  requirements.txt  train.py
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile.api  docker-compose.yml
docs/: CNAME  index.html  simulator.html
docs/js/: main.js  simulator.js
frontend/: index.html
frontend/css/: style.css
src/: __init__.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  auth.py  consent.py  rate_limit.py
src/api/routes/: __init__.py  explain.py  fraud.py  health.py  kyc.py  score.py
src/api/schemas/: __init__.py  application.py
src/compliance/: __init__.py  bias_auditor.py  consent_manager.py  encryption.py  ndpa.py
src/config/: __init__.py  model_config.py  risk_config.py  settings.py
src/data/: __init__.py
src/data/ingestion/: __init__.py  alt_data.py  credit_bureau.py  kyc_kyb.py  open_banking.py
src/data/processing/: __init__.py  cleaner.py
src/data/synthetic/: __init__.py  generator.py
src/explainability/: __init__.py  report_generator.py  shap_explainer.py
src/features/: __init__.py  engine.py
src/fraud/: __init__.py  screener.py
src/models/: __init__.py  ensemble.py  logistic.py  random_forest.py  xgboost_model.py
src/scoring/: __init__.py  decision_rules.py  risk_bands.py  scorer.py
tests/: __init__.py
tests/unit/: test_engine.py
